* Support for many new heuristics for reasoning with quantifiers, including
  finite model finding.
* Support for proofs for uninterpreted functions, arrays, bitvectors, and
  their combinations.
* Performance improvements to existing theories.
* A new theory of sets with cardinality and relations.
* A new theory of strings.
* Support for unsat cores.
* Simplification mode "incremental" no longer supported.
* Support for array constants in constraints.
* Syntax for array models has changed in some language front-ends.
* New input/output languages supported: "smt2.0" and "smtlib2.0" to
  force SMT-LIB v2.0; "smt2.5" and "smtlib2.5" to force SMT-LIB v2.5;
  "smt2.6" and "smtlib2.6" to force SMT-LIB v2.6;
  "smt", "smtlib", "smt2", and "smtlib2" all refer to the current standard
  version 2.6.  If an :smt-lib-version is set in the input, that overrides
  the command line.
* Abstract values in SMT-LIB models are now ascribed types (with "as").
* In SMT-LIB model output, real-sorted but integer-valued constants are
  now printed in accordance with the standard (e.g. "1.0").

Changes since 1.3
=================

* CVC4 now supports libc++ in addition to libstdc++ (this especially
  helps on Mac OS Mavericks).
* The LFSC proof checker has been incorporated into CVC4 sources.
* Theory of finite sets, handling the MLSS fragment (singleton, union,
  intersection, set subtraction, membership and subset).
* By default, CVC4 builds in "production" mode (optimized, with fewer
  internal checks on).  The common alternative is a "debug" build, which
  is much slower.  By default, CVC4 builds with no GPL'ed dependences.
  However, this is not the best-performing version; for that, you should
  configure with "--enable-gpl --best", which links against GPL'ed
  libraries that improve usability and performance.  For details on
  licensing and dependences, see the README file.
* Small API adjustments to Datatypes to even out the API and make it
  function better in Java.